--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,35 @@
 #
 
 -i https://pypi.org/simple
+appdirs==1.4.4
+beautifulsoup4==4.11.1; python_version >= '3.6'
+bs4==0.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.12; python_version >= '3'
 click==8.1.3; python_version >= '3.7'
 colorama==0.4.4; platform_system == 'Windows'
+cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+fake-useragent==0.1.11
 flask==2.1.2
 gunicorn==20.1.0
+idna==3.3; python_version >= '3'
 importlib-metadata==4.11.3; python_version < '3.10'
 itsdangerous==2.1.2; python_version >= '3.7'
 jinja2==3.1.2; python_version >= '3.7'
+lxml==4.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 markupsafe==2.1.1; python_version >= '3.7'
+parse==1.19.0
+pyee==8.2.2
+pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4.0'
+pyquery==1.4.3
+requests-html==0.10.0
+requests==2.27.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 setuptools==62.1.0; python_version >= '3.7'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+soupsieve==2.3.2.post1; python_version >= '3.6'
+tqdm==4.64.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4.0'
+w3lib==1.22.0
+websockets==10.3; python_version >= '3.7'
 werkzeug==2.1.2; python_version >= '3.7'
 zipp==3.8.0; python_version >= '3.7'
