--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ gunicorn==20.1.0
 
 idna==3.3; python_version >= '3'
 
-importlib-metadata==4.11.3; python_version < '3.10'
+importlib-metadata==4.11.3; python_version >= '3.7'
 
 itsdangerous==2.1.2; python_version >= '3.7'
 
@@ -52,7 +52,7 @@ parse==1.19.0
 
 pyee==8.2.2
 
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4.0'
+pyppeteer==1.0.2
 
 pyquery==1.4.3
 
@@ -68,7 +68,7 @@ soupsieve==2.3.2.post1; python_version >= '3.6'
 
 tqdm==4.64.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 
-urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4.0'
+urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 
 w3lib==1.22.0
 
